# Robotics-Second-Project

./: connect.sh  start.sh
catkin_ws/: .gitignore  run_in_container.sh
catkin_ws/src/second_project/: CMakeLists.txt  info.txt  package.xml
catkin_ws/src/second_project/action/: goals.action
catkin_ws/src/second_project/config/: RVIZ_CONFIG.rviz  cartographer_params.lua  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slam_toolbox_params.yaml
catkin_ws/src/second_project/csv/: goals.csv
catkin_ws/src/second_project/launch/: amcl.launch.xml  launch.launch  mapping.launch  mapping2.launch  navigation.launch
catkin_ws/src/second_project/maps/: map.pgm  map.yaml  my_map.pgm  my_map.yaml
catkin_ws/src/second_project/maps/stage/: map.world  turtlebot.inc
catkin_ws/src/second_project/rviz/: robot_mapping.rviz  robot_navigation.rviz  robot_navigation2.rviz
catkin_ws/src/second_project/src/: goals_server.cpp  goals_server2.cpp  laser_merge.cpp  laser_merge2.cpp  laser_merge4.cpp  odom_tf.cpp  sandbox.cpp
catkin_ws/src/stage/: map.world  map2.pgm  map2.yaml
catkins_ws/src/second_project/: CMakeLists.txt  package.xml
data/: project.bag
docker/: Dockerfile  build.sh
macos_users/: macos_gui_initialize.sh  start.sh
windows_users/: start.ps1  windows_gui_initialize.ps1
