<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.0</version>
  <description>The second_project package</description>

  <maintainer email="maichiouene@gmail.com">Mohamed Aichiouene</maintainer>
  <license>TODO</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <!-- <build_depend>cmath</build_depend> -->

  <!-- Build Export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Run-time dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>cmath</exec_depend> -->

  <!-- Exported information -->
  <export>
    <!-- <build_type>cmake</build_type> -->
  </export>
</package>
